UMS/atom: default to DVI mode if we don't have monitor hdmi info

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=30330